# adv_ml_application_assignment_1

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: adaboost_experiment_C.joblib  ohe_A.joblib  rf_experiment_A.joblib  rf_experiment_B.joblib  scaler_A.joblib  scaler_C.joblib
notebooks/: 1_baseline.ipynb  Experiment B.ipynb  Experiment_A.ipynb  Experiment_B.ipynb  Experiment_C.ipynb  Untitled.ipynb  alexander_daniel-24591214-week1_randomforrest.ipynb  alexander_daniel-24591214-week2_randomforrest.ipynb  alexander_daniel-24591214-week3_adaptivebooster.ipynb
src/models/: pop_target.py  split_sets_random.py
