[tool.poetry]
name = "adv-ml-application-assignment-1"
version = "0.1.0"
description = ""
authors = ["Daniel A"]
readme = "README.md"
packages = [{include = "adv_ml_application_assignment_1"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
